--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   <main>
     
     <header>
-      <h1>Titulo do Site</h1>
+      <h1>Curso Gratis</h1>
     </header>
     <nav></nav>
 
     <section>
       <article>
-      <h2>Artigo 1</h2>
-      <p>Texto do artigo</p>
+      <h2>Curso de HTML e CSS</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem minus modi qui sint recusandae neque autem dolore et laudantium, tempore eaque officiis dignissimos consequatur ipsa deserunt. Corporis animi laborum voluptate.</p>
     </article>
 
     <article>
-      <h2>Artigo 2</h2>
-      <p>Texto do artigo</p>
+      <h2>Curso de javascript</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatum, quod perferendis dolor ipsam sunt, cupiditate corporis dolores enim voluptas, molestiae exercitationem atque nam debitis ratione blanditiis veniam assumenda accusantium.</p>
     </article>
     </section>
     
