Rest of the content

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <section>
       <article>
       <h2>Curso de HTML e CSS</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem minus modi qui sint recusandae neque autem dolore et laudantium, tempore eaque officiis dignissimos consequatur ipsa deserunt. Corporis animi laborum voluptate.</p>
+      <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para criação de sites. Atualmente na versão 5, ele usa a semântica dos elementos para criar o conteúdo de uma página web. Com as <abbr title="Cascating Style Sheets">CSS</abbr>, criamos as configuações visuais que um site vai ter.</p>
     </article>
 
     <article>
       <h2>Curso de javascript</h2>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatum, quod perferendis dolor ipsam sunt, cupiditate corporis dolores enim voluptas, molestiae exercitationem atque nam debitis ratione blanditiis veniam assumenda accusantium.</p>
+      <p>Javascript é uma linguagem script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em jS são executados dentro de um navegador e dão acessos aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr></p>
     </article>
     </section>
     
