Add image to site

--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
     
     <header>
       <h1>Curso Gratis</h1>
+      <img src="imagens/curso-em-video-cor.png" alt="curso em video">
     </header>
     <nav></nav>
 
     <section>
       <article>
       <h2>Curso de HTML e CSS</h2>
+      <img src="imagens/curso-html-css.png" alt="curso de html e css">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem minus modi qui sint recusandae neque autem dolore et laudantium, tempore eaque officiis dignissimos consequatur ipsa deserunt. Corporis animi laborum voluptate.</p>
     </article>
 
     <article>
       <h2>Curso de javascript</h2>
+      <img src="imagens/curso-javascript.png" alt="curso de javascript">
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae voluptatum, quod perferendis dolor ipsam sunt, cupiditate corporis dolores enim voluptas, molestiae exercitationem atque nam debitis ratione blanditiis veniam assumenda accusantium.</p>
     </article>
     </section>
